# phage_annotation

./: .gitignore  README.md  pyproject.toml
containers/: Dockerfile.addmore  Dockerfile.fix  Dockerfile.pharokka  Dockerfile.pharokka2  Dockerfile.phold
scripts/: pharokka.py  phold.py
src/: __init__.py  assets.py
