[project]
name = "phage_annotations"
version = "0.1.0"
description = "Pipeline to explore different tools for phage genome annotation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dagster>=1.11.2",
    "dagster-docker>=0.27.2",
    "dagster-pipes>=1.11.2",
    "dagster-webserver>=1.11.2",
    "toolz>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "ruff==0.12.3",
  "black==25.1.0",
  "pre-commit==4.2.0",
  "ipython == 9.4.0",
  "duckdb-engine == 0.17.0",
  "jupysql == 0.11.1",
  "toml == 0.10.2",
  "radon >= 6.0.1",
]